--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:3iIbenkY/e2msXUYp8Ic2Zj0aF8SeeBsGEBqzXWhNgY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost:8080/laravel/proyecto/public
+APP_URL=http://localhost/Parcial3-master/public
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
